# sms-svc

./: .gitignore  README.md  carma-sms-svc.cabal  carma-sms-svc.conf  sms-svc.cabal  sms-svc.conf  sources.txt  stack.yaml  test-msg.sh
debian/: carma-sms-svc.default  carma-sms-svc.init  carma-sms-svc.monit  carma-sms-svc.rsyslog  carma-sms-svc.upstart  changelog  control  copyright  rules
debian/source/: options
src/: Main.hs
