name:                carma-sms-svc
version:             0.1.0.0
license:             MIT
author:              Max Taldykin
maintainer:          max@formalmethods.ru

build-type:          Simple
cabal-version:       >=1.10

executable carma-sms-svc
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -O2

  build-depends:
    base >=4.6 && <=4.9.1.0,

    configurator      == 0.3.*,
    hsyslog           == 5.0.*,
    postgresql-simple == 0.5.*,
    resource-pool     == 0.2.3.*,
    text              == 1.2.2.*,
    transformers      == 0.5.*,
    curl              == 1.3.*,
    HTTP              == 4000.3.*



  default-extensions:
    OverloadedStrings,
    LambdaCase

  other-extensions:
    QuasiQuotes
