name:                sms-svc
version:             0.1.0.0
license:             MIT
author:              Max Taldykin
maintainer:          max@formalmethods.ru

build-type:          Simple
cabal-version:       >=1.10

executable sms-svc
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -O2

  build-depends:
    base >=4.6 && <4.7,

    configurator      == 0.2.*,
    hsyslog           == 1.6.*,
    postgresql-simple == 0.4.*,
    resource-pool     == 0.2.1.*,
    text              >= 0.11 && < 1.1,
    transformers      == 0.3.*,
    smsdirect         == 0.1.1.*


  default-extensions:
    OverloadedStrings,
    LambdaCase

  other-extensions:
    QuasiQuotes
